--- a/style/main.css
+++ b/style/main.css
@@ -417,6 +417,15 @@ body {
     border-bottom-right-radius: 0rem !important;
 }
 
+.markdown-code {
+    color: var(--text-highlight-color);
+    font-family: monospace;
+}
+
+.markdown-preview {
+    background-color: var(--main-background-color)
+}
+
 .modifier-badge {
     margin-right: 0.25rem;
 }
